* 2012-07-16 - thorben.betten@open-xchange.com

 - Fix for bug 22564: Ignore possibly wrong message reference on reply

* 2012-07-12 - jan.bauerdick@open-xchange.com

 - New service to store/retrieve sessions
 - Enhanced c.o.sessiond to use SessionStorageService

* 2012-07-11 - thorben.betten@open-xchange.com

 - Fix for bug 22501: Removed wrong '$' sign in printf-style string

* 2012-07-10 - thorben.betten@open-xchange.com

 - Fix for bug 15326: Special handling for "transaction roll-back error" and responding with try-again error code TSK-0054
 - Fix for bug 22099: Special handling for "transaction roll-back error" and responding with try-again error code APP-0108
 - Fix for bug 22491: Dropped annoying System.out.println() invocations
 - Fix for bug 22487: Re-initialize SessionPOP3StorageUIDLMap if timer elapsed in the meantime
 - Fix for bug 22467: Fixed possible NPE in AbstractPerformer class

* 2012-07-09 - choeger@open-xchange.com

 - Bugfix #22482: [L3] reporter throws unneeded messages to stderr
 
* 2012-07-06 - thorben.betten@open-xchange.com

 - Fix for bug 22489: Dealing with failed auto-save

* 2012-07-05 - thorben.betten@open-xchange.com

 - Fix for bug 22473: Fixed own rights for INBOX folder

* 2012-07-04 - thorben.betten@open-xchange.com

 - Fix for bug 17693: Responding with a "try-again" error code if "json_0" multipart part is missing

* 2012-07-03 - thorben.betten@open-xchange.com

 - Fix for bug 22454: Chunk-wise IMAP searches
 - Fix for bug 22351: More lenient handling for less FETCH responses than expected
 - Partly fix for bug 22093: Dealing with non-selectable folders during action=all request
 - Fix for 22093: Dealing with non-selectable folders during folder listing

* 2012-07-02 - tobias.friedrich@open-xchange.com

- Fix for bug 22451: Demystified until parameter in recurrence rules

* 2012-07-02 - thorben.betten@open-xchange.com

 - Fix for bug 22448: Changed error message for code SES-0007
